New Feature: PUBMAN-1338 : Browse by ... - Implementation

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -114,6 +114,8 @@ BreadCrumb_info = Aktionen:
 
 BrowseByChooseInitial = W\u00E4hle Anfangsbuchstabe
 
+BrowseByChooseYear = W\u00E4hle Jahr
+
 BrowseByCreator = Browse By Urheber
 
 BrowseByCreatorDesc = Browse by creator names and view the corresponding items.
@@ -126,7 +128,11 @@ BrowseByPage = Browse By
 
 BrowseBySelect = W\u00E4hle Browse By
 
-BrowseBySubject = Browse By Schlagwort
+BrowseBySubject = Jahr
+
+BrowseByYear = Browse By Jahr
+
+BrowseByYearDesc = Browse by year and view the corresponding items.
 
 #
 #CartItemsPage
@@ -283,7 +289,6 @@ ENUM_EMPTY = -
 #
 # Genre Types
 #
-
 ENUM_GENRE_ARTICLE = Zeitschriftenartikel
 
 ENUM_GENRE_BOOK = Buch
@@ -293,15 +298,67 @@ ENUM_GENRE_BOOK_ITEM = Buchkapitel
 # kind of Journal Article, source Journal
 ENUM_GENRE_BOOK_REVIEW = Rezension
 
+# kind of Journal Article, source Journal
+ENUM_GENRE_CASE_NOTE = Entscheidungsanmerkung
+
+# kind of Journal Article, source Journal
+ENUM_GENRE_CASE_STUDY = Fallbesprechung 
+
+ENUM_GENRE_COLLECTED_EDITION = Sammelwerk
+
+ENUM_GENRE_COMMENTARY = Kommentar 
+
+ENUM_GENRE_CONFERENCE_PAPER = Konferenzbeitrag
+
 ENUM_GENRE_CONFERENCE_REPORT = Konferenzbericht
 
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Beitrag in Sammelwerk 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Beitrag in Kommentar 
+
+# kind of Book, source Encyclopedia
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Beitrag in Lexikon 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Beitrag in Festschrift 
+
+# kind of Book, source Series, Mutli-Volume
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Beitrag in Handbuch 
+
 ENUM_GENRE_COURSEWARE_LECTURE = Lehrmaterial
+
+# kind of Journal Article, source Journal, Book
+ENUM_GENRE_EDITORIAL = Editorial
+
+ENUM_GENRE_ENCYCLOPEDIA = Lexikon
+
+ENUM_GENRE_FESTSCHRIFT = Festschrift
+
+ENUM_GENRE_HANDBOOK = Handbuch
 
 ENUM_GENRE_ISSUE = Sonderheft
 
 ENUM_GENRE_JOURNAL = Zeitschrift
 
 ENUM_GENRE_MANUSCRIPT = Manuskript
+
+#
+# Jus-specific Source genres
+#
+ENUM_GENRE_MONOGRAPH = Monografie
+
+ENUM_GENRE_MULTI_VOLUME = Mehrb\u00E4ndiges Werk
+
+ENUM_GENRE_NEWSPAPER = Zeitung
+
+#Jus-specific genre types BEGIN
+# source Newspaper
+ENUM_GENRE_NEWSPAPER_ARTICLE = Zeitungsartikel
+
+# kind of Journal Article, source Journal or without source, can be published on a webpage
+ENUM_GENRE_OPINION = Stellungnahme
 
 ENUM_GENRE_OTHER = Sonstige
 
@@ -320,58 +377,6 @@ ENUM_GENRE_TALK_AT_EVENT = Vortrag
 ENUM_GENRE_THESIS = Hochschulschrift
 
 ENUM_IDENTIFIERTYPE_ = n.a.
-
-# kind of Journal Article, source Journal
-ENUM_GENRE_CASE_NOTE = Entscheidungsanmerkung
-
-# kind of Journal Article, source Journal
-ENUM_GENRE_CASE_STUDY = Fallbesprechung 
-
-ENUM_GENRE_COLLECTED_EDITION = Sammelwerk
-
-ENUM_GENRE_COMMENTARY = Kommentar 
-
-ENUM_GENRE_CONFERENCE_PAPER = Konferenzbeitrag
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Beitrag in Sammelwerk 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Beitrag in Kommentar 
-
-# kind of Book, source Encyclopedia
-ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Beitrag in Lexikon 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Beitrag in Festschrift 
-
-# kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Beitrag in Handbuch 
-
-# kind of Journal Article, source Journal, Book
-ENUM_GENRE_EDITORIAL = Editorial
-
-ENUM_GENRE_ENCYCLOPEDIA = Lexikon
-
-ENUM_GENRE_FESTSCHRIFT = Festschrift
-
-ENUM_GENRE_HANDBOOK = Handbuch
-
-#
-# Jus-specific Source genres
-#
-ENUM_GENRE_MONOGRAPH = Monografie
-
-ENUM_GENRE_MULTI_VOLUME = Mehrb\u00E4ndiges Werk
-
-ENUM_GENRE_NEWSPAPER = Zeitung
-
-#Jus-specific genre types BEGIN
-# source Newspaper
-ENUM_GENRE_NEWSPAPER_ARTICLE = Zeitungsartikel
-
-# kind of Journal Article, source Journal or without source, can be published on a webpage
-ENUM_GENRE_OPINION = Stellungnahme
 
 #Jus-specific Publication types END
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
@@ -731,12 +736,10 @@ Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
-Export_ExportFormat_XML = XML
-
-Export_FileFormat_ESCIDOC_SNIPPET = SNIPPET v6.x
-
 # JUS - Export-Format
 Export_ExportFormat_JUS = JUS
+
+Export_ExportFormat_XML = XML
 
 Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
 
@@ -1150,9 +1153,9 @@ ViewItemFull_lblSubHeaderFile = Dateien
 #
 ViewItemFull_lblSubHeaderItem = Genre: 
 
-ViewItemFull_lblSubHeaderLocalTags = Lokale Tags
-
 ViewItemFull_lblSubHeaderLegalCase = Entscheidung
+
+ViewItemFull_lblSubHeaderLocalTags = Lokale Tags
 
 ViewItemFull_lblSubHeaderLocators = Externe Referenzen
 
@@ -1541,6 +1544,8 @@ WithdrawItem_lnkPublication = Ver\u00F6ffentlichung
 
 WithdrawItem_lnkWithdraw = Zur\u00FCckziehen
 
+Year = Jahr
+
 about = \u00DCber PubMan
 
 #
@@ -1780,6 +1785,10 @@ confirmSelection = Auswahl best\u00E4tigen
 contact = Kontakt
 
 creator_type = Typ
+
+dateOptionAny = Irgendein Jahr
+
+dateOptionPublished = Erscheinungsjahr
 
 ddcDesc = Dewey-Dezimalklassifikation
 
