--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -113,6 +113,8 @@ BreadCrumb_info = Actions:
 
 BrowseByChooseInitial = Choose Initial
 
+BrowseByChooseYear = Choose Year
+
 BrowseByCreator = Browse By Creator
 
 BrowseByCreatorDesc = Browse by creator names and view the corresponding items.
@@ -125,7 +127,11 @@ BrowseByPage = Browse By
 
 BrowseBySelect = Choose Browse By
 
-BrowseBySubject = Browse By Subject
+BrowseBySubject = Year
+
+BrowseByYear = Browse By Year
+
+BrowseByYearDesc = Browse by year and view the corresponding items.
 
 #
 #CartItemsPage
@@ -279,25 +285,17 @@ ENUM_DEGREETYPE_STAATSEXAMEN = Staatsexamen
 
 ENUM_EMPTY = -
 
-
 #
 # Genre Types
 #
-
 ENUM_GENRE_ARTICLE = Journal Article
 
 ENUM_GENRE_BOOK = Book
 
 ENUM_GENRE_BOOK_ITEM = Book Chapter
 
-ENUM_GENRE_CONFERENCE_PAPER = Proceedings Paper
-
 # kind of Journal Article, source Journal
 ENUM_GENRE_BOOK_REVIEW = Book Review
-
-ENUM_GENRE_CONFERENCE_REPORT = Conference report
-
-ENUM_GENRE_COURSEWARE_LECTURE = Teaching
 
 # kind of Journal Article, source Journal
 ENUM_GENRE_CASE_NOTE = Case Note
@@ -380,7 +378,6 @@ ENUM_GENRE_THESIS = Thesis
 ENUM_IDENTIFIERTYPE_ = n.a.
 
 #Jus-specific Publication types END
-
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
@@ -738,12 +735,10 @@ Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
-Export_ExportFormat_XML = XML
-
-Export_FileFormat_ESCIDOC_SNIPPET = SNIPPET v6.x
-
 # JUS - Export-Format
 Export_ExportFormat_JUS = JUS
+
+Export_ExportFormat_XML = XML
 
 Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
 
@@ -1538,6 +1533,8 @@ WithdrawItem_lnkPublication = Publication
 
 WithdrawItem_lnkWithdraw = Withdraw
 
+Year = Year
+
 about = About PubMan
 
 #
@@ -1760,6 +1757,8 @@ affiliation_detail_phone = Telephone
 
 all = Select all
 
+asy_submission_lblCollectionOfImportedItem1 = This item will be imported to the
+
 cancel = Cancel
 
 component_content-category = Content category
@@ -1777,6 +1776,10 @@ confirmSelection = Confirm Selection
 contact = Contact us
 
 creator_type = Type
+
+dateOptionAny = Any Year
+
+dateOptionPublished = Year Published
 
 ddcDesc = Dewey Decimal Classification
 
@@ -1835,8 +1838,6 @@ easy_submission_lblAbstract = Abstract
 easy_submission_lblBibtexPath = Path
 
 easy_submission_lblBibtexUpload = Upload
-
-asy_submission_lblCollectionOfImportedItem1 = This item will be imported to the
 
 easy_submission_lblCollectionOfImportedItem2 = \ imported
 
@@ -2015,7 +2016,6 @@ g_creator_person_organization = Persons & Organizations
 g_details = Details
 
 g_events = Event
-
 
 #
 # JUS-specific labels END
