--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -25,7 +25,6 @@
 # f\u00FCr wissenschaftlich-technische Information mbH and Max-Planck-
 # Gesellschaft zur F\u00F6rderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
-
 AcceptItemPage = \u30A2\u30A4\u30C6\u30E0\u627F\u8A8D
 
 AcceptItem_lblAudienceNoticeAccept = \u975E\u516C\u958B\u30FB\u5236\u9650\u4ED8\u304D\u30D5\u30A1\u30A4\u30EB\u306B\u5BFE\u3057\u3066\u306F\u3001\u516C\u958B\u5F8C\u306B\u3001\u300C\u5171\u6709\u300D\u30BF\u30D6\u30E1\u30CB\u30E5\u30FC\u304B\u3089\u30A2\u30AF\u30BB\u30B9\u53EF\u80FD\u306A\u30E6\u30FC\u30B6\u30B0\u30EB\u30FC\u30D7\u3092\u6307\u5B9A\u3067\u304D\u307E\u3059\u3002
@@ -114,9 +113,11 @@ BreadCrumb_info = \u5C65\u6B74:
 
 BrowseByChooseInitial = Choose Initial
 
+BrowseByChooseYear = Choose Year
+
 BrowseByCreator = Browse By Creator
 
-BrowseByCreatorDesc = Browse by creator and view the corresponding items.
+BrowseByCreatorDesc = Browse by creator names and view the corresponding items.
 
 BrowseByInitial = Initial:
 
@@ -126,7 +127,11 @@ BrowseByPage = Browse By
 
 BrowseBySelect = Choose Browse By
 
-BrowseBySubject = Browse By Subject
+BrowseBySubject = Year
+
+BrowseByYear = Browse By Year
+
+BrowseByYearDesc = Browse by year and view the corresponding items.
 
 #
 #CartItemsPage
@@ -402,11 +407,11 @@ ENUM_REVIEWMETHOD_NO_REVIEW = \u67FB\u8AAD\u306A\u3057
 
 ENUM_REVIEWMETHOD_PEER = \u67FB\u8AAD\u3042\u308A
 
+ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u3042\u308A
+
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_FILES = with file(s)
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_LOCATORS = with locator(s)
-
-ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u3042\u308A
 
 ENUM_SELECTCOMPONENTAVAILABILITY_SELECT_HAS_NO_COMPONENTS = \u30D5\u30A1\u30A4\u30EB\u6DFB\u4ED8\u306A\u3057
 
@@ -1455,6 +1460,8 @@ WithdrawItem_lnkPublication = \u30A2\u30A4\u30C6\u30E0
 
 WithdrawItem_lnkWithdraw = \u53D6\u308A\u4E0B\u3052
 
+Year = Year
+
 about = PubMan\u306B\u3064\u3044\u3066
 
 #
@@ -1694,6 +1701,10 @@ confirmSelection = \u9078\u629E\u3092\u78BA\u8A8D
 contact = \u9023\u7D61\u5148
 
 creator_type = \u7A2E\u5225
+
+dateOptionAny = Any Year
+
+dateOptionPublished = Year Published
 
 ddcDesc = Dewey Decimal Classification
 
