Bugfix: PUBMAN-1389 - Label for "Show Query" is missing in german search results page

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -924,6 +924,8 @@ SearchResultList_lblSortedBy = sortiert nach
 
 Search_lblShowHide = einblenden/ausblenden
 
+ShowQuery = Zeige Suchabfrage
+
 #
 # Submission
 #
