--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -857,6 +857,8 @@ SearchResultList_lblSortedBy = \u30BD\u30FC\u30C8\u6761\u4EF6:
 
 Search_lblShowHide = \u8868\u793A\u30FB\u7701\u7565
 
+ShowQuery = Show Query
+
 #
 # Submission
 #
