--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -68,7 +68,7 @@ AffiliationDetailSuccessors = Nachfolgeorganisationen
 
 AffiliationSearchResultListPage = Suchergebnisse
 
-AffiliationTreePage = Organisationssuche
+AffiliationTreePage = Browse By Organisation
 
 AffiliationTree_lnkDescription = Beschreibung
 
@@ -81,7 +81,7 @@ AffiliationTree_txtEmail = E-Mail
 
 AffiliationTree_txtFax = Fax
 
-AffiliationTree_txtHeadline = Organisationen
+AffiliationTree_txtHeadline = Browse By Organisation
 
 AffiliationTree_txtHeadlineDetails = Organisationsdetails
 
