--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -67,7 +67,7 @@ AffiliationDetailSuccessors = Organization successors
 
 AffiliationSearchResultListPage = Search Results
 
-AffiliationTreePage = Organization Search
+AffiliationTreePage = Browse By Organization
 
 AffiliationTree_lnkDescription = Description
 
@@ -80,7 +80,7 @@ AffiliationTree_txtEmail = E-Mail
 
 AffiliationTree_txtFax = Fax
 
-AffiliationTree_txtHeadline = Organizations
+AffiliationTree_txtHeadline = Browse By Organization
 
 AffiliationTree_txtHeadlineDetails = Organization Description
 
