added mpipks browse by

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -2187,6 +2187,8 @@ mainMenu_lnkPolicy = Leitlinien&Impressum
 
 mainMenu_lnkQAWorkspace = QA BEREICH
 
+mpipksDesc = MPI PKS Klassifikation
+
 multipleImport_checkboxRollback = bei Fehlern zur\u00FCcksetzen
 
 multipleImport_checkboxSomething = multipleImport_checkboxSomething
