--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -2179,6 +2179,8 @@ mainMenu_lnkPolicy = Policy&Disclaimer
 
 mainMenu_lnkQAWorkspace = QA WORKSPACE
 
+mpipksDesc = MPI PKS Classification
+
 multipleImport_checkboxRollback = Undo on error
 
 multipleImport_checkboxSomething = multipleImport_checkboxSomething
