--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -2084,6 +2084,8 @@ mainMenu_lnkPolicy = \u30DD\u30EA\u30B7\u30FC/\u514D\u8CAC\u4E8B\u9805
 
 mainMenu_lnkQAWorkspace = \u7BA1\u7406\u753B\u9762
 
+mpipksDesc = MPI PKS Classification
+
 multipleImport_checkboxRollback = \u30A8\u30E9\u30FC\u6642\u306B\u51E6\u7406\u3092\u5DEE\u3057\u623B\u3059
 
 multipleImport_checkboxSomething = multipleImport_checkboxSomething
