Abbreviqation as alternative source title

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -171,6 +171,10 @@ DepositorWSPage = Meine Datens\u00E4tze
 # ExportItems
 DisplayExportItemsPage = Liste der exportierten Datens\u00E4tze
 
+ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = Kurztitel
+
+ENUM_ALTERNATIVETITLETYPE_OTHER = Andere
+
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
 ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: beliebiger Volltext
@@ -383,6 +387,8 @@ ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
 
+ENUM_IDENTIFIERTYPE_CONE = CoNE
+
 ENUM_IDENTIFIERTYPE_DOI = DOI
 
 ENUM_IDENTIFIERTYPE_EDOC = eDoc
@@ -502,7 +508,7 @@ ENUM_SORTORDER_DESCENDING = absteigend
 
 ENUM_STATE_IN_REVISION = In \u00DCberarbeitung
 
-ENUM_STATE_PENDING = Pending
+ENUM_STATE_PENDING = Schwebend
 
 ENUM_STATE_RELEASED = Freigegeben
 
@@ -1109,6 +1115,10 @@ ViewItemFull_lblReleased = , freigegeben
 ViewItemFull_lblRemoveFromBasket = Aus dem Basket entfernen
 
 ViewItemFull_lblRevisionMethod = Art der Begutachtung
+
+ViewItemFull_lblRollback = Version wiederherstellen
+
+ViewItemFull_lblRollbackConfirm = Sollen die bestehenden Daten wirklich mit dieser Version ersetzt werden?
 
 ViewItemFull_lblShowGroup = einblenden:
 
@@ -2295,7 +2305,13 @@ source_title = Titel
 
 source_title_alternative = Alternativer Titel
 
+source_title_alternative_type = Art
+
+source_title_alternative_value = Titel
+
 source_volume = Band
+
+sources_source_basic_source_title_alternative_value_label = XXX
 
 #
 # for cut&paste
