--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -170,6 +170,10 @@ DepositorWSPage = My Items
 # ExportItems
 DisplayExportItemsPage = Exported Itemlist
 
+ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = Abbreviation
+
+ENUM_ALTERNATIVETITLETYPE_OTHER = Other
+
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
 ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: Any fulltext
@@ -381,6 +385,8 @@ ENUM_IDENTIFIERTYPE_ = n.a.
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
+
+ENUM_IDENTIFIERTYPE_CONE = CoNE
 
 ENUM_IDENTIFIERTYPE_DOI = DOI
 
@@ -1098,6 +1104,10 @@ ViewItemFull_lblReleased = , released
 ViewItemFull_lblRemoveFromBasket = Remove from Basket
 
 ViewItemFull_lblRevisionMethod = Rev. Method
+
+ViewItemFull_lblRollback = Rollback to this version
+
+ViewItemFull_lblRollbackConfirm = Do you really want to replace the existing data with this version?
 
 ViewItemFull_lblShowGroup = show
 
@@ -2287,7 +2297,13 @@ source_title = Title
 
 source_title_alternative = Alternative Title
 
+source_title_alternative_type = Type
+
+source_title_alternative_value = Title
+
 source_volume = Volume
+
+sources_source_basic_source_title_alternative_value_label = YYY
 
 #
 # for cut&paste
