--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -166,6 +166,10 @@ DepositorWSPage = \u767B\u9332\u4E00\u89A7
 # ExportItems
 DisplayExportItemsPage = \u30A8\u30AF\u30B9\u30DD\u30FC\u30C8\u30A2\u30A4\u30C6\u30E0\u4E00\u89A7
 
+ENUM_ALTERNATIVETITLETYPE_ABBREVIATION = Abbreviation
+
+ENUM_ALTERNATIVETITLETYPE_OTHER = Other
+
 ENUM_CONTENTCATEGORY_ABSTRACT = Deprecated: Abstract
 
 ENUM_CONTENTCATEGORY_ANY_FULLTEXT = Deprecated: Any fulltext
@@ -318,6 +322,8 @@ ENUM_GENRE_THESIS = \u5B66\u4F4D\u8AD6\u6587
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
 ENUM_IDENTIFIERTYPE_BMC = BMC
+
+ENUM_IDENTIFIERTYPE_CONE = CoNE
 
 ENUM_IDENTIFIERTYPE_DOI = DOI
 
@@ -1030,6 +1036,10 @@ ViewItemFull_lblReleased = , \u516C\u958B
 ViewItemFull_lblRemoveFromBasket = \u4E00\u6642\u4FDD\u5B58\u304B\u3089\u524A\u9664
 
 ViewItemFull_lblRevisionMethod = \u67FB\u8AAD
+
+ViewItemFull_lblRollback = Rollback to this version
+
+ViewItemFull_lblRollbackConfirm = Do you really want to replace the existing data with this version?
 
 ViewItemFull_lblShowGroup = \u8868\u793A:
 
@@ -2188,7 +2198,13 @@ source_title = \u51FA\u7248\u7269\u306E\u30BF\u30A4\u30C8\u30EB
 
 source_title_alternative = \u5225\u30BF\u30A4\u30C8\u30EB
 
+source_title_alternative_type = Type
+
+source_title_alternative_value = Title
+
 source_volume = \u5DFB
+
+sources_source_basic_source_title_alternative_value_label = ZZZ
 
 #
 # for cut&paste
