--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -582,6 +582,8 @@ EditItem_lblAlternativeTitel = Alternative title
 
 EditItem_lblBasic = Basic
 
+EditItem_lblClassifiedSubject = Classified Subject
+
 EditItem_lblCollection = Collection
 
 EditItem_lblCollectionOfItem = This item is part of the
@@ -607,8 +609,6 @@ EditItem_lblCreatorOfSource = Creator of Source
 EditItem_lblCreatorRole = Creator role
 
 EditItem_lblCreatorType = Type
-
-EditItem_lblDDCSubject = DDC Subject
 
 EditItem_lblDateFormat = (YYYY-MM-DD)
 
@@ -2119,6 +2119,10 @@ item_published-online = Date published online
 item_review-method = Review type
 
 item_subject = Free keywords
+
+item_subject_type = Type
+
+item_subject_value = Value
 
 item_table-of-contents = Table of content
 
