--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -519,6 +519,8 @@ EditItem_lblAlternativeTitel = \u5225\u30BF\u30A4\u30C8\u30EB
 
 EditItem_lblBasic = \u57FA\u672C\u60C5\u5831
 
+EditItem_lblClassifiedSubject = Classified Subject
+
 EditItem_lblCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3
 
 EditItem_lblCollectionOfItem = \u767B\u9332\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D: 
@@ -544,8 +546,6 @@ EditItem_lblCreatorOfSource = \u51FA\u7248\u8005
 EditItem_lblCreatorRole = \u4F5C\u8005\u7A2E\u5225
 
 EditItem_lblCreatorType = \u7A2E\u5225
-
-EditItem_lblDDCSubject = DDC\u5206\u985E
 
 EditItem_lblDateFormat = (YYYY-MM-DD)
 
@@ -2035,6 +2035,10 @@ item_published-online = \u30AA\u30F3\u30E9\u30A4\u30F3\u51FA\u7248\u65E5
 item_review-method = \u67FB\u8AAD\u7A2E\u5225
 
 item_subject = \u30AD\u30FC\u30EF\u30FC\u30C9
+
+item_subject_type = Type
+
+item_subject_value = Value
 
 item_table-of-contents = \u76EE\u6B21
 
