--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -583,6 +583,8 @@ EditItem_lblAlternativeTitel = Alternativer Titel
 
 EditItem_lblBasic = Basisdaten
 
+EditItem_lblClassifiedSubject = Klassifizierte Schlagworte
+
 EditItem_lblCollection = Collection
 
 EditItem_lblCollectionOfItem = Dieser Datensatz ist Teil der
@@ -608,8 +610,6 @@ EditItem_lblCreatorOfSource = Urheber der Quelle
 EditItem_lblCreatorRole = Rolle d. Urhebers
 
 EditItem_lblCreatorType = Typ
-
-EditItem_lblDDCSubject = DDC Subject
 
 EditItem_lblDateFormat = (JJJJ-MM-TT)
 
@@ -2127,6 +2127,10 @@ item_published-online = Erschienen online
 item_review-method = Art der Begutachtung
 
 item_subject = Stichw\u00F6rter
+
+item_subject_type = Art
+
+item_subject_value = Wert
 
 item_table-of-contents = Inhaltsverzeichnis
 
