--- a/pubman/pubman_presentation/src/main/resources/Messages_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Messages_en.properties
@@ -64,7 +64,11 @@ DateModifiedNotProvided = The "modified" date has to be provided and it has to b
 
 DateNotProvided = If genre is not equal to "Series" or "Journal" or "Other" or "Manuscript" at least one date has to be provided.
 
+DegreeThesisRequiered = Degree Type required. 
+
 EndDateWithoutStartDate = If an event end-date is given, a start-date must also be provided.
+
+EndPageNotProvided = End Page requiered.
 
 EnglishAbstractNotProvided = An abstract in "English" has to be provided.
 
@@ -80,29 +84,13 @@ GenreNotSuitable = The selected genre is not allowed in the actual collection.
 
 IdTypeNotProvided = An identifier is missing the type.
 
+IncorrectClassification = The entered keyword does not conform to the given classification.
+
 LocatorIsNoUri = The external reference is no valid URL.
-
-#
-# JUS BEGIN
-#
-StartPageArticleRequiered  = Start Page and End Page has to be provided for Journal Article. 
-
-StartPageNotProvided = Start Page required.  
-
-EndPageNotProvided = End Page requiered.
-
-StartPageLowerEqualEndPage = End Page has to greater or equal to Start Page.
-
-PublisherNameSourceNotProvided = Publishing information was entered without a publisher in the source. 
-
-DegreeThesisRequiered = Degree Type required. 
-
-NoConeJournal = No CONE Journal. 
 
 #
 # JUS END
 #
-
 #
 # LoginErrorPage
 #
@@ -114,7 +102,7 @@ MimeTypeNotValid = The given mime type is not valid.
 
 MpdlCreatorRequired = At least one author has to be the MPDL or affiliated to it.
 
-NoDDCKeyword = The entered keyword does not conform to the DDC classification.
+NoConeJournal = No CONE Journal. 
 
 NoPublicFileProvided = At least one file with visibility "public" has to be uploaded for the item.
 
@@ -125,6 +113,8 @@ OrganizationNameNotProvided = Organization data was entered without an organizat
 OrganizationalMetadataNotProvided = At least one creator needs an organizational unit.
 
 PublisherNameNotProvided = Publishing information was entered without a publisher.
+
+PublisherNameSourceNotProvided = Publishing information was entered without a publisher in the source. 
 
 ReviewMethodInternalNotProvided = The Review Method has to have the value "internal".
 
@@ -139,6 +129,15 @@ SourceGenreNotProvided = If a source title was entered, a source genre has to be
 SourceNotProvided = If genre is equal to "Journal Article", "Book Chapter" or "Proceedings Paper" at least one source has to be provided.
 
 SourceTitleNotProvided = Source information was entered without a source title.
+
+#
+# JUS BEGIN
+#
+StartPageArticleRequiered = Start Page and End Page has to be provided for Journal Article. 
+
+StartPageLowerEqualEndPage = End Page has to greater or equal to Start Page.
+
+StartPageNotProvided = Start Page required.  
 
 StatisticsUpdatedDaily = Notice: The statistic data is updated on a daily basis.
 
