Message improvement: PUBMAN-1078 - definition of audience groups after submit

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -952,7 +952,7 @@ SubmitItem_lblSubmitAudienceNotice = Sharing-Hinweis
 
 SubmitItem_lblSubmitAudienceNoticeRelease = Die Nutzergruppen f\u00FCr den Zugriff auf Ihre Volltexte k\u00F6nnen nur vom Moderator festgelegt werden. Bitte hinterlassen Sie entsprechende Hinweise f\u00FCr den Moderator im Feld unten.
 
-SubmitItem_lblSubmitAudienceNoticeSubmit = Die Nutzergruppen f\u00FCr den Zugriff auf Ihre Volltexte kann nur der Moderator ausw\u00E4hlen, sobald er Ihren Datensatz freigegeben hat. Bitte hinterlassen Sie entsprechende Hinweise f\u00FCr den Moderator im Feld unten.
+SubmitItem_lblSubmitAudienceNoticeSubmit = Ihr Datensatz enth\u00E4lt mindestens eine Datei mit eingeschr\u00E4nkten Zugriffsrechten. Die Nutztergruppe(n), welche Zugriff auf die entsprechende Datei haben sollen, k\u00F6nnen ausgewählt werden sobald der Datensatz in PubMan eingestellt wurde. Bitte nutzen Sie den Tab "Sharing" für die Auswahl der gew\u00FCnschten Nutzergruppe(n).
 
 SubmitItem_lblSubmitComment = Kommentar zum Einstellen
 
