--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -949,7 +949,7 @@ SubmitItem_lblSubmitAudienceNotice = Sharing Notice
 
 SubmitItem_lblSubmitAudienceNoticeRelease = The usergroups which will have access to your files can only be defined by the moderator. Please leave a respective message for the moderator in the field below.
 
-SubmitItem_lblSubmitAudienceNoticeSubmit = The usergroups which will have access to your files can only be defined by the moderator, as soon as your item is released. Please leave a respective message for the moderator in the field below.
+SubmitItem_lblSubmitAudienceNoticeSubmit = Your item contains at least one file with restricted access level. The usergroup(s) which should have the permission to access the respective file(s) can be selected as soon as your item is submitted. Please use the "sharing" tab for the definition of the desired usergroup(s).
 
 SubmitItem_lblSubmitComment = Submit Comment
 
