proceedings paper change to conference paper in search

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1650,7 +1650,7 @@ adv_search_lblChkGenre_book = Book
 
 adv_search_lblChkGenre_bookitem = Book Chapter
 
-adv_search_lblChkGenre_conferencepap = Proceedings Paper
+adv_search_lblChkGenre_conferencepap = Conference Paper
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
