2 new html output formats: plain and styled

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -749,7 +749,9 @@ Export_ExportFormat_XML = XML
 
 Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
 
-Export_FileFormat_HTML = HTML
+Export_FileFormat_HTML_PLAIN = unformatiertes HTML
+
+Export_FileFormat_HTML_STYLED = formatiertes HTML
 
 Export_FileFormat_ODT = ODT
 
