--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -748,7 +748,9 @@ Export_ExportFormat_XML = XML
 
 Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
 
-Export_FileFormat_HTML = HTML
+Export_FileFormat_HTML_PLAIN = plain HTML
+
+Export_FileFormat_HTML_STYLED = styled HTML
 
 Export_FileFormat_ODT = ODT
 
