--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -682,7 +682,9 @@ Export_ExportFormat_XML = XML
 
 Export_FileFormat_ESCIDOC_SNIPPET = \u53C2\u7167\u5F62\u5F0F\u4ED8\u304DXML v6.x
 
-Export_FileFormat_HTML = HTML
+Export_FileFormat_HTML_PLAIN = plain HTML
+
+Export_FileFormat_HTML_STYLED = styled HTML
 
 Export_FileFormat_ODT = ODT
 
