DDC for ViewItemFull added

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1016,6 +1016,8 @@ ViewItemFull_lblDateSubmitted = Eingestellt,
 
 ViewItemFull_lblDates = Datum
 
+ViewItemFull_lblDDCSubject = DDC
+
 ViewItemFull_lblDegreeType = Art des Abschlu\u00DF
 
 ViewItemFull_lblDescription = Beschreibung
