--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1013,6 +1013,8 @@ ViewItemFull_lblDateSubmitted = Submitted,
 
 ViewItemFull_lblDates = Dates
 
+ViewItemFull_lblDDCSubject = DDC
+
 ViewItemFull_lblDegreeType = Degree
 
 ViewItemFull_lblDescription = Description
