--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -615,7 +615,7 @@ EditItem_lblDateFormat = (JJJJ-MM-TT)
 
 EditItem_lblDatesAndPublishing = Datum, Verlag, Ort, Ausgabe
 
-EditItem_lblDegreeType = Art des Abschlu\u00DF
+EditItem_lblDegreeType = Art des Abschlusses
 
 EditItem_lblDegreeTypeGroup = Art des Abschlusses
 
