added missing label

--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -610,6 +610,8 @@ EditItem_lblCreatorRole = Creator role
 
 EditItem_lblCreatorType = Type
 
+EditItem_lblDDCSubject = DDC
+
 EditItem_lblDateFormat = (YYYY-MM-DD)
 
 EditItem_lblDatesAndPublishing = Dates and Publishing Information
@@ -999,6 +1001,8 @@ ViewItemFull_lblCreator = Creator
 
 ViewItemFull_lblCreators = Creators
 
+ViewItemFull_lblDDCSubject = DDC
+
 ViewItemFull_lblDateAccepted = Accepted, 
 
 ViewItemFull_lblDateCreated = Created, 
@@ -1012,8 +1016,6 @@ ViewItemFull_lblDatePublishedOnline = Published Online,
 ViewItemFull_lblDateSubmitted = Submitted, 
 
 ViewItemFull_lblDates = Dates
-
-ViewItemFull_lblDDCSubject = DDC
 
 ViewItemFull_lblDegreeType = Degree
 
