--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -611,6 +611,8 @@ EditItem_lblCreatorRole = Rolle d. Urhebers
 
 EditItem_lblCreatorType = Typ
 
+EditItem_lblDDCSubject = DDC
+
 EditItem_lblDateFormat = (JJJJ-MM-TT)
 
 EditItem_lblDatesAndPublishing = Datum, Verlag, Ort, Ausgabe
@@ -954,7 +956,7 @@ SubmitItem_lblSubmitAudienceNotice = Sharing-Hinweis
 
 SubmitItem_lblSubmitAudienceNoticeRelease = Die Nutzergruppen f\u00FCr den Zugriff auf Ihre Volltexte k\u00F6nnen nur vom Moderator festgelegt werden. Bitte hinterlassen Sie entsprechende Hinweise f\u00FCr den Moderator im Feld unten.
 
-SubmitItem_lblSubmitAudienceNoticeSubmit = Ihr Datensatz enth\u00E4lt mindestens eine Datei mit eingeschr\u00E4nkten Zugriffsrechten. Die Nutztergruppe(n), welche Zugriff auf die entsprechende Datei haben sollen, k\u00F6nnen ausgewählt werden sobald der Datensatz in PubMan eingestellt wurde. Bitte nutzen Sie den Tab "Sharing" für die Auswahl der gew\u00FCnschten Nutzergruppe(n).
+SubmitItem_lblSubmitAudienceNoticeSubmit = Ihr Datensatz enth\u00E4lt mindestens eine Datei mit eingeschr\u00E4nkten Zugriffsrechten. Die Nutztergruppe(n), welche Zugriff auf die entsprechende Datei haben sollen, k\u00F6nnen ausgew\u00E4hlt werden sobald der Datensatz in PubMan eingestellt wurde. Bitte nutzen Sie den Tab "Sharing" f\u00FCr die Auswahl der gew\u00FCnschten Nutzergruppe(n).
 
 SubmitItem_lblSubmitComment = Kommentar zum Einstellen
 
@@ -1002,6 +1004,8 @@ ViewItemFull_lblCreator = Urheber
 
 ViewItemFull_lblCreators = Urheber
 
+ViewItemFull_lblDDCSubject = DDC
+
 ViewItemFull_lblDateAccepted = Akzeptiert, 
 
 ViewItemFull_lblDateCreated = Erstellt, 
@@ -1015,8 +1019,6 @@ ViewItemFull_lblDatePublishedOnline = Online ver\u00F6ffentlicht,
 ViewItemFull_lblDateSubmitted = Eingestellt, 
 
 ViewItemFull_lblDates = Datum
-
-ViewItemFull_lblDDCSubject = DDC
 
 ViewItemFull_lblDegreeType = Art des Abschlu\u00DF
 
