added missing labels, improved wording

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -747,19 +747,19 @@ Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 # JUS - Export-Format
 Export_ExportFormat_JUS = JUS
 
-Export_ExportFormat_XML = XML
+Export_ExportFormat_XML = xml
 
-Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
+Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc Snippet
 
-Export_FileFormat_HTML_PLAIN = unformatiertes HTML
+Export_FileFormat_HTML_PLAIN = html (unformatiert)
 
-Export_FileFormat_HTML_STYLED = formatiertes HTML
+Export_FileFormat_HTML_STYLED = html (formatiert)
 
-Export_FileFormat_ODT = ODT
+Export_FileFormat_ODT = odt
 
-Export_FileFormat_PDF = PDF
+Export_FileFormat_PDF = pdf
 
-Export_FileFormat_RTF = RTF
+Export_FileFormat_RTF = rtf
 
 Export_FileFormat_SNIPPET = SNIPPET v5.x
 
@@ -1785,6 +1785,8 @@ affiliation_detail_fax = Fax
 affiliation_detail_phone = Telefon
 
 all = alle auw\u00E4hlen
+
+asy_submission_lblCollectionOfImportedItem1 = This item will be imported to the
 
 cancel = Abbrechen
 
