--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -746,19 +746,19 @@ Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 # JUS - Export-Format
 Export_ExportFormat_JUS = JUS
 
-Export_ExportFormat_XML = XML
+Export_ExportFormat_XML = xml
 
-Export_FileFormat_ESCIDOC_SNIPPET = ESCIDOC SNIPPET
+Export_FileFormat_ESCIDOC_SNIPPET = eSciDoc Snippet
 
-Export_FileFormat_HTML_PLAIN = plain HTML
+Export_FileFormat_HTML_PLAIN = html (plain)
 
-Export_FileFormat_HTML_STYLED = styled HTML
+Export_FileFormat_HTML_STYLED = html (formatted)
 
-Export_FileFormat_ODT = ODT
+Export_FileFormat_ODT = odt
 
-Export_FileFormat_PDF = PDF
+Export_FileFormat_PDF = pdf
 
-Export_FileFormat_RTF = RTF
+Export_FileFormat_RTF = rtf
 
 Export_FileFormat_SNIPPET = SNIPPET v5.x
 
@@ -831,6 +831,8 @@ List_ShortView = Short View (All Items)
 List_lblAddToBasket = ADD SELECTED TO BASKET
 
 List_lblBibList = Bibliographic List
+
+List_lblExportAllOptions = BASKET EXPORT
 
 List_lblExportOptions = EXPORT
 
@@ -1083,7 +1085,15 @@ ViewItemFull_lblLanguages = Language(s)
 
 ViewItemFull_lblLastModified = Last modified
 
+ViewItemFull_lblLegalCaseCourtName = Court
+
 ViewItemFull_lblLegalCaseCourtNameIdDate = Court, Date, Case Reference Nr
+
+ViewItemFull_lblLegalCaseDatePublished = Date
+
+ViewItemFull_lblLegalCaseIdentifier = Aktenzeichen
+
+ViewItemFull_lblLegalCaseTitle = Title
 
 ViewItemFull_lblLinkSection = Item Details
 
@@ -1856,6 +1866,8 @@ easy_submission_lblAbstract = Abstract
 easy_submission_lblBibtexPath = Path
 
 easy_submission_lblBibtexUpload = Upload
+
+easy_submission_lblCollectionOfImportedItem1 = This item will be in the
 
 easy_submission_lblCollectionOfImportedItem2 = \ imported
 
