--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -140,6 +140,10 @@ CartItemsPage = \u4E00\u6642\u4FDD\u5B58
 
 CollaboratorPage = Collaborator
 
+CollaboratorPage_group = Group
+
+CollaboratorPage_modify = enable modification
+
 CreateItemPage = \u65B0\u898F\u30A2\u30A4\u30C6\u30E0\u306E\u767B\u9332
 
 CreateNewRevision_ChooseCollection = \u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u540D\u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u3001\u767B\u9332\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u3092\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
@@ -291,17 +295,55 @@ ENUM_GENRE_BOOK = \u66F8\u7C4D
 
 ENUM_GENRE_BOOK_ITEM = \u66F8\u7C4D\u306E\u4E00\u90E8
 
+ENUM_GENRE_BOOK_REVIEW = Book Review
+
+ENUM_GENRE_CASE_NOTE = Case Note
+
+ENUM_GENRE_CASE_STUDY = Case Study
+
+ENUM_GENRE_COLLECTED_EDITION = Collected Edition
+
+ENUM_GENRE_COMMENTARY = Commentary 
+
 ENUM_GENRE_CONFERENCE_PAPER = \u4F1A\u8B70\u8AD6\u6587
 
 ENUM_GENRE_CONFERENCE_REPORT = \u4F1A\u8B70\u5831\u544A\u66F8
 
+ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Edition 
+
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary \u0009
+
+ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to an Encyclopedia 
+
+ENUM_GENRE_CONTRIBUTION_TO_FESTSCHRIFT = Contribution to a Festschrift 
+
+ENUM_GENRE_CONTRIBUTION_TO_HANDBOOK = Contribution to a Handbook 
+
 ENUM_GENRE_COURSEWARE_LECTURE = \u6559\u6750
+
+ENUM_GENRE_EDITORIAL = Editorial
+
+ENUM_GENRE_ENCYCLOPEDIA = Encyclopedia 
+
+ENUM_GENRE_FESTSCHRIFT = Festschrift
+
+ENUM_GENRE_HANDBOOK = Handbook 
 
 ENUM_GENRE_ISSUE = \u7279\u96C6\u53F7
 
 ENUM_GENRE_JOURNAL = \u5B66\u8853\u96D1\u8A8C
 
 ENUM_GENRE_MANUSCRIPT = \u8349\u7A3F
+
+ENUM_GENRE_MONOGRAPH = Monograph
+
+ENUM_GENRE_MULTI_VOLUME = Multi-Volume 
+
+ENUM_GENRE_NEWSPAPER = Newspaper
+
+ENUM_GENRE_NEWSPAPER_ARTICLE = Newspaper Article 
+
+ENUM_GENRE_OPINION = Opinion
 
 ENUM_GENRE_OTHER = \u305D\u306E\u4ED6
 
@@ -318,6 +360,8 @@ ENUM_GENRE_SERIES = \u9023\u8F09\u8A18\u4E8B
 ENUM_GENRE_TALK_AT_EVENT = \u8B1B\u6F14
 
 ENUM_GENRE_THESIS = \u5B66\u4F4D\u8AD6\u6587
+
+ENUM_IDENTIFIERTYPE_ = n.a.
 
 ENUM_IDENTIFIERTYPE_ARXIV = arXiv
 
@@ -680,19 +724,21 @@ Export_ExportFormat_ENDNOTE = EndNote (UTF-8)
 
 Export_ExportFormat_ESCIDOC_XML = eSciDoc XML
 
-Export_ExportFormat_XML = XML
+Export_ExportFormat_JUS = JUS
 
-Export_FileFormat_ESCIDOC_SNIPPET = \u53C2\u7167\u5F62\u5F0F\u4ED8\u304DXML v6.x
+Export_ExportFormat_XML = xml
 
-Export_FileFormat_HTML_PLAIN = plain HTML
+Export_FileFormat_ESCIDOC_SNIPPET = \u53C2\u7167\u5F62\u5F0F\u4ED8\u304DXML 
 
-Export_FileFormat_HTML_STYLED = styled HTML
+Export_FileFormat_HTML_PLAIN = html (plain)
 
-Export_FileFormat_ODT = ODT
+Export_FileFormat_HTML_STYLED = html (formatted)
 
-Export_FileFormat_PDF = PDF
+Export_FileFormat_ODT = odt
 
-Export_FileFormat_RTF = RTF
+Export_FileFormat_PDF = pdf
+
+Export_FileFormat_RTF = rtf
 
 Export_FileFormat_SNIPPET = \u53C2\u7167\u5F62\u5F0F\u4ED8\u304DXML v5.x
 
@@ -917,6 +963,8 @@ ViewItemFull_btnItemVersions = \u30EA\u30EA\u30FC\u30B9\u5C65\u6B74\u3092\u8868\
 
 ViewItemFull_lblAbstract = \u8981\u65E8
 
+ViewItemFull_lblAbstractLanguage = Language of Abstract
+
 ViewItemFull_lblAddToBasket = \u4E00\u6642\u4FDD\u5B58\u3078\u8FFD\u52A0
 
 ViewItemFull_lblAffiliations = \u6240\u5C5E
@@ -934,6 +982,8 @@ ViewItemFull_lblCreateItemFromTemplate = \u30B3\u30D4\u30FC\u3057\u3066\u65B0\u8
 ViewItemFull_lblCreator = \u4F5C\u6210\u8005
 
 ViewItemFull_lblCreators = \u4F5C\u6210\u8005
+
+ViewItemFull_lblDDCSubject = DDC
 
 ViewItemFull_lblDateAccepted = \u53D7\u7406\u65E5, 
 
@@ -1015,6 +1065,16 @@ ViewItemFull_lblLanguages = \u8A00\u8A9E
 
 ViewItemFull_lblLastModified = \u6700\u7D42\u66F4\u65B0
 
+ViewItemFull_lblLegalCaseCourtName = Court
+
+ViewItemFull_lblLegalCaseCourtNameIdDate = Court, Date, Case Reference Nr
+
+ViewItemFull_lblLegalCaseDatePublished = Date
+
+ViewItemFull_lblLegalCaseIdentifier = Aktenzeichen
+
+ViewItemFull_lblLegalCaseTitle = Title
+
 ViewItemFull_lblLinkSection = \u30A2\u30A4\u30C6\u30E0\u8A73\u7D30
 
 ViewItemFull_lblLocatorContentCategory = \u30EA\u30F3\u30AF\u5148\u306E\u7A2E\u5225
@@ -1089,6 +1149,8 @@ ViewItemFull_lblSubHeaderFile = \u30D5\u30A1\u30A4\u30EB
 # ViewItem Full
 #
 ViewItemFull_lblSubHeaderItem = \u8CC7\u6599\u7A2E\u5225: 
+
+ViewItemFull_lblSubHeaderLegalCase = Legal Case
 
 ViewItemFull_lblSubHeaderLocalTags = \u30BF\u30B0\u60C5\u5831\u3092\u8868\u793A
 
@@ -1700,6 +1762,8 @@ affiliation_detail_phone = \u96FB\u8A71\u756A\u53F7
 
 all = \u5168\u3066\u3092\u9078\u629E
 
+asy_submission_lblCollectionOfImportedItem1 = This item will be imported to the
+
 cancel = \u30AD\u30E3\u30F3\u30BB\u30EB
 
 component_content-category = \u5185\u5BB9\u7A2E\u5225
@@ -1965,6 +2029,8 @@ g_item_basic = \u57FA\u672C\u60C5\u5831
 
 g_item_degree = \u5B66\u4F4D\u7A2E\u5225
 
+g_legal_case = Legal Case
+
 g_locators = \u95A2\u9023URL
 
 g_select_roles = \u4F5C\u8005\u7A2E\u5225
@@ -2055,6 +2121,14 @@ item_total-number-of-pages = \u7DCF\u30DA\u30FC\u30B8\u6570
 lblSubject = Subject
 
 lbl_noEntry = -
+
+legal_case_court_name = Court
+
+legal_case_date_published = Date
+
+legal_case_identifier = Case Reference Number 
+
+legal_case_title = Title
 
 locator_component_visibility = \u95B2\u89A7\u5236\u9650
 
@@ -2195,6 +2269,10 @@ skip_to_searchMenu = \u691C\u7D22\u30E1\u30CB\u30E5\u30FC\u306B\u98DB\u3076
 source_end-page = \u7D42\u4E86\u30DA\u30FC\u30B8
 
 source_genre = \u51FA\u7248\u7269\u306E\u7A2E\u5225
+
+source_identifier_type = Type of identifier
+
+source_identifier_value = Identifier value
 
 source_issue = \u53F7
 
