Jus-lables for the advanced search added

--- a/pubman/pubman_presentation/src/main/resources/Label_de.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_de.properties
@@ -1665,19 +1665,49 @@ adv_search_lblChkGenre_article = Zeitschriftenartikel
 
 adv_search_lblChkGenre_book = Buch
 
+adv_search_lblChkGenre_bookreview = Rezension
+
 adv_search_lblChkGenre_bookitem = Buchkapitel
+
+adv_search_lblChkGenre_casenote = Entscheidungsanmerkung
+
+adv_search_lblChkGenre_casestudy = Fallbesprechung 
+
+adv_search_lblChkGenre_colled = Sammelwerk
+
+adv_search_lblChkGenre_commentary = Kommentar 
 
 adv_search_lblChkGenre_conferencepap = Konferenzbeitrag
 
 adv_search_lblChkGenre_conferencerep = Konferenzbericht
 
+adv_search_lblChkGenre_contrcolled =  Beitrag in Sammelwerk 
+
+adv_search_lblChkGenre_contrcommentary = Beitrag in Kommentar 
+
+adv_search_lblChkGenre_contrlexikon = Beitrag in Lexikon 
+
+adv_search_lblChkGenre_contrfestschrift = Beitrag in Festschrift 
+
+adv_search_lblChkGenre_contrhandbook = Beitrag in Handbuch 
+
 adv_search_lblChkGenre_courseware = Lehrmaterial
+
+adv_search_lblChkGenre_editorial = Editorial
+
+adv_search_lblChkGenre_festschrift = Festschrift
 
 adv_search_lblChkGenre_issue = Sonderheft
 
 adv_search_lblChkGenre_journal = Zeitschrift
 
 adv_search_lblChkGenre_manuscript = Manuskript
+
+adv_search_lblChkGenre_monogaph = Monografie
+
+adv_search_lblChkGenre_newspaperarticle = Zeitungsartikel
+
+adv_search_lblChkGenre_opinion = Stellungnahme
 
 adv_search_lblChkGenre_other = Sonstige
 
@@ -1694,6 +1724,7 @@ adv_search_lblChkGenre_series = Reihe
 adv_search_lblChkGenre_talkatevent = Vortrag
 
 adv_search_lblChkGenre_thesis = Hochschulschrift
+
 
 adv_search_lblChkInclude = Files einbinden
 
