--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -319,7 +319,7 @@ ENUM_GENRE_CONFERENCE_REPORT = Conference report
 ENUM_GENRE_CONTRIBUTION_TO_COLLECTED_EDITION = Contribution to a Collected Edition 
 
 # kind of Book, source Series, Mutli-Volume
-ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary \u0009
+ENUM_GENRE_CONTRIBUTION_TO_COMMENTARY = Contribution to a Commentary 
 
 # kind of Book, source Encyclopedia
 ENUM_GENRE_CONTRIBUTION_TO_ENCYCLOPEDIA = Contribution to an Encyclopedia 
@@ -1664,19 +1664,49 @@ adv_search_lblChkGenre_article = Journal Article
 
 adv_search_lblChkGenre_book = Book
 
+adv_search_lblChkGenre_bookreview = Book Review
+
 adv_search_lblChkGenre_bookitem = Book Chapter
+
+adv_search_lblChkGenre_casenote = Case Note
+
+adv_search_lblChkGenre_casestudy = Case Study
+
+adv_search_lblChkGenre_colled = Collected Edition
+
+adv_search_lblChkGenre_commentary = Commentary
 
 adv_search_lblChkGenre_conferencepap = Conference Paper
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
+adv_search_lblChkGenre_contrcolled =  Contribution to a \u0009 Collected Edition 
+
+adv_search_lblChkGenre_contrcommentary = Contribution to a \u0009 Commentary 
+
+adv_search_lblChkGenre_contrlexikon = Contribution to an \u0009 Encyclopedia 
+
+adv_search_lblChkGenre_contrfestschrift = Beitrag in Festschrift 
+
+adv_search_lblChkGenre_contrhandbook = Contribution to a Handbook 
+
 adv_search_lblChkGenre_courseware = Teaching
 
-adv_search_lblChkGenre_issue = Special Issue
+adv_search_lblChkGenre_editorial = Editorial
+
+adv_search_lblChkGenre_festschrift = Festschrift
+
+adv_search_lblChkGenre_issue = Special Journal Issue
 
 adv_search_lblChkGenre_journal = Journal
 
 adv_search_lblChkGenre_manuscript = Manuscript
+
+adv_search_lblChkGenre_monogaph = Monograph
+
+adv_search_lblChkGenre_newspaperarticle = Newspaper Article
+
+adv_search_lblChkGenre_opinion = Opinion
 
 adv_search_lblChkGenre_other = Other
 
@@ -1693,6 +1723,8 @@ adv_search_lblChkGenre_series = Series
 adv_search_lblChkGenre_talkatevent = Talk
 
 adv_search_lblChkGenre_thesis = Thesis
+
+
 
 adv_search_lblChkInclude = Include Files
 
