--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1643,17 +1643,47 @@ adv_search_lblChkGenre_book = \u66F8\u7C4D
 
 adv_search_lblChkGenre_bookitem = \u66F8\u7C4D\u306E\u4E00\u90E8
 
+adv_search_lblChkGenre_bookreview = Book Review
+
+adv_search_lblChkGenre_casenote = Case Note
+
+adv_search_lblChkGenre_casestudy = Case Study
+
+adv_search_lblChkGenre_colled = Collected Edition
+
+adv_search_lblChkGenre_commentary = Commentary
+
 adv_search_lblChkGenre_conferencepap = \u4F1A\u8B70\u8AD6\u6587
 
 adv_search_lblChkGenre_conferencerep = \u4F1A\u8B70\u5831\u544A
 
+adv_search_lblChkGenre_contrcolled =  Contribution to a Collected Edition 
+
+adv_search_lblChkGenre_contrcommentary = Contribution to a Commentary 
+
+adv_search_lblChkGenre_contrlexikon = Contribution to an Encyclopedia 
+
+adv_search_lblChkGenre_contrfestschrift = Beitrag in Festschrift 
+
+adv_search_lblChkGenre_contrhandbook = Contribution to a Handbook 
+
 adv_search_lblChkGenre_courseware = \u6559\u6750
+
+adv_search_lblChkGenre_editorial = Editorial
+
+adv_search_lblChkGenre_festschrift = Festschrift
 
 adv_search_lblChkGenre_issue = \u7279\u96C6\u53F7
 
 adv_search_lblChkGenre_journal = \u8AD6\u6587\u8A8C
 
 adv_search_lblChkGenre_manuscript = \u8349\u7A3F
+
+adv_search_lblChkGenre_monogaph = Monograph
+
+adv_search_lblChkGenre_newspaperarticle = Newspaper Article
+
+adv_search_lblChkGenre_opinion = Opinion
 
 adv_search_lblChkGenre_other = \u305D\u306E\u4ED6
 
