--- a/pubman/pubman_presentation/src/main/resources/Label_ja.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_ja.properties
@@ -1663,7 +1663,7 @@ adv_search_lblChkGenre_contrcommentary = Contribution to a Commentary
 
 adv_search_lblChkGenre_contrlexikon = Contribution to an Encyclopedia 
 
-adv_search_lblChkGenre_contrfestschrift = Beitrag in Festschrift 
+adv_search_lblChkGenre_contrfestschrift = Contribution to a Festschrift
 
 adv_search_lblChkGenre_contrhandbook = Contribution to a Handbook 
 
