--- a/pubman/pubman_presentation/src/main/resources/Label_en.properties
+++ b/pubman/pubman_presentation/src/main/resources/Label_en.properties
@@ -1680,13 +1680,13 @@ adv_search_lblChkGenre_conferencepap = Conference Paper
 
 adv_search_lblChkGenre_conferencerep = Conference Report
 
-adv_search_lblChkGenre_contrcolled =  Contribution to a \u0009 Collected Edition 
+adv_search_lblChkGenre_contrcolled =  Contribution to a Collected Edition 
 
-adv_search_lblChkGenre_contrcommentary = Contribution to a \u0009 Commentary 
+adv_search_lblChkGenre_contrcommentary = Contribution to a Commentary 
 
-adv_search_lblChkGenre_contrlexikon = Contribution to an \u0009 Encyclopedia 
+adv_search_lblChkGenre_contrlexikon = Contribution to an Encyclopedia 
 
-adv_search_lblChkGenre_contrfestschrift = Beitrag in Festschrift 
+adv_search_lblChkGenre_contrfestschrift = Contribution to a Festschrift 
 
 adv_search_lblChkGenre_contrhandbook = Contribution to a Handbook 
 
